fixed the issue with some of the pages content on small screen sizes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -174,6 +174,19 @@ body{
   margin-right: 15px;
 }
 /* body */
+.center1{
+  height: fit-content;
+}
+.center1 p{
+  width: 100%;
+  font-size: 15px;
+}
+.content-img1{
+  width: 75%;
+  margin-left: 12.5%;
+  height: unset;
+  float: none;
+}
 .header{
   height: 244px;
 }
